--- a/Mapsui.Demo.WPF/packages.config
+++ b/Mapsui.Demo.WPF/packages.config
@@ -10,6 +10,6 @@
   <package id="System.Collections" version="4.3.0" targetFramework="net461" />
   <package id="System.Data.SQLite.Core" version="1.0.115.0" targetFramework="net461" />
   <package id="System.Diagnostics.Debug" version="4.3.0" targetFramework="net461" />
-  <package id="System.Runtime.Extensions" version="4.3.0" targetFramework="net461" />
+  <package id="System.Runtime.Extensions" version="4.3.0" targetFramework="net461" requireReinstallation="true" />
   <package id="System.Threading" version="4.3.0" targetFramework="net461" />
 </packages>
