This seems to be closer to rendering properly, but removing the Windows deps has broken some of the rendering and has screwed up all the text at a certain level - and after a certain zoom level we get garbles results.
Removing all the deps was quite complicated so I need to do some side by side fixes I think.

--- a/VectorTileRenderer/VectorTileRenderer.csproj
+++ b/VectorTileRenderer/VectorTileRenderer.csproj
@@ -54,4 +54,10 @@
 			<Version>1.0.115</Version>
 		</PackageReference>		
 	</ItemGroup>
+	<ItemGroup>
+	  <ProjectReference Include="..\Mapbox.VectorTiles\ExtensionMethods\ExtensionMethods.csproj" />
+	  <ProjectReference Include="..\Mapbox.VectorTiles\Geometry\Geometry.csproj" />
+	  <ProjectReference Include="..\Mapbox.VectorTiles\PbfReader\PbfReader.csproj" />
+	  <ProjectReference Include="..\Mapbox.VectorTiles\VectorTileReader\VectorTileReader.csproj" />
+	</ItemGroup>
 </Project>
