Made a full build clean the cache - this makes debugging simpler ;-)

--- a/Mapsui.Demo.WPF/Mapsui.Demo.WPF.csproj
+++ b/Mapsui.Demo.WPF/Mapsui.Demo.WPF.csproj
@@ -159,7 +159,8 @@
     </PreBuildEvent>
   </PropertyGroup>
   <PropertyGroup>
-    <PostBuildEvent>xcopy "$(SolutionDir)VectorTileRenderer\bin\Debug\netstandard2.0\x64\SQLite.Interop.dll"  "$(TargetDir)" /y</PostBuildEvent>
+    <PostBuildEvent>xcopy "$(SolutionDir)VectorTileRenderer\bin\Debug\netstandard2.0\x64\SQLite.Interop.dll"  "$(TargetDir)" /y
+del /F /S /Q $(SolutionDir)tile-cache\*.*</PostBuildEvent>
   </PropertyGroup>
   <Import Project="..\packages\Stub.System.Data.SQLite.Core.NetFramework.1.0.115.0\build\net46\Stub.System.Data.SQLite.Core.NetFramework.targets" Condition="Exists('..\packages\Stub.System.Data.SQLite.Core.NetFramework.1.0.115.0\build\net46\Stub.System.Data.SQLite.Core.NetFramework.targets')" />
 </Project>
