--- a/VectorTileRenderer/VectorTileRenderer.csproj
+++ b/VectorTileRenderer/VectorTileRenderer.csproj
@@ -50,9 +50,7 @@
 		<PackageReference Include="SkiaSharp.Views">
 			<Version>1.60.0</Version>
 		</PackageReference>
-		<PackageReference Include="Stub.System.Data.SQLite.Core.NetFramework">
-			<Version>1.0.115</Version>
-		</PackageReference>		
+		<PackageReference Include="sqlite-net-pcl" Version="1.7.335" />		
 	</ItemGroup>
 	<ItemGroup>
 	  <ProjectReference Include="..\Mapbox.VectorTiles\ExtensionMethods\ExtensionMethods.csproj" />
