--- a/Mapsui.Demo.WPF/packages.config
+++ b/Mapsui.Demo.WPF/packages.config
@@ -2,9 +2,10 @@
 <packages>
   <package id="BruTile" version="1.0.0" targetFramework="net461" />
   <package id="ConcurrentHashSet" version="1.0.2" targetFramework="net461" />
-  <package id="Mapsui" version="1.3.2" targetFramework="net461" />
-  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net461" />
-  <package id="SkiaSharp" version="1.60.0" targetFramework="net461" />
+  <package id="Mapsui" version="1.4.8" targetFramework="net462" />
+  <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net462" />
+  <package id="SkiaSharp" version="2.80.3" targetFramework="net462" />
+  <package id="SkiaSharp.Svg" version="1.59.1" targetFramework="net462" />
   <package id="SkiaSharp.Views" version="1.60.0" targetFramework="net461" />
   <package id="sqlite-net-pcl" version="1.7.335" targetFramework="net462" />
   <package id="SQLitePCLRaw.bundle_green" version="2.0.3" targetFramework="net462" />
