--- a/TileTest/TileTest/TileTest.csproj
+++ b/TileTest/TileTest/TileTest.csproj
@@ -11,7 +11,15 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Xamarin.Forms" Version="5.0.0.2012" />
-    <PackageReference Include="Xamarin.Essentials" Version="1.6.1" />
+    <PackageReference Include="Xamarin.Forms" Version="5.0.0.2244" />
+    <PackageReference Include="Xamarin.Essentials" Version="1.7.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\Mapbox.VectorTiles\ExtensionMethods\ExtensionMethods.csproj" />
+    <ProjectReference Include="..\..\Mapbox.VectorTiles\Geometry\Geometry.csproj" />
+    <ProjectReference Include="..\..\Mapbox.VectorTiles\PbfReader\PbfReader.csproj" />
+    <ProjectReference Include="..\..\Mapbox.VectorTiles\VectorTileReader\VectorTileReader.csproj" />
+    <ProjectReference Include="..\..\VectorTileRenderer\VectorTileRenderer.csproj" />
   </ItemGroup>
 </Project>
