--- a/VectorTileRenderer/VectorTileRenderer.csproj
+++ b/VectorTileRenderer/VectorTileRenderer.csproj
@@ -38,14 +38,15 @@
 		<None Include="app.config" />
 	</ItemGroup>
 	<ItemGroup>
+		<PackageReference Include="Microsoft.CSharp" Version="4.3.0" />
 		<PackageReference Include="NETStandard.Library">
 			<Version>2.0.3</Version>
 		</PackageReference>
 		<PackageReference Include="Newtonsoft.Json">
-			<Version>9.0.1</Version>
+			<Version>13.0.1</Version>
 		</PackageReference>
 		<PackageReference Include="SkiaSharp">
-			<Version>1.60.0</Version>
+			<Version>2.80.3</Version>
 		</PackageReference>
 		<PackageReference Include="sqlite-net-pcl" Version="1.7.335" />		
 	</ItemGroup>
