--- a/Mapsui.Demo.WPF/packages.config
+++ b/Mapsui.Demo.WPF/packages.config
@@ -1,18 +1,28 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="BruTile" version="1.0.0" targetFramework="net461" />
+  <package id="BruTile" version="4.0.0" targetFramework="net48" />
   <package id="ConcurrentHashSet" version="1.0.2" targetFramework="net461" />
-  <package id="Mapsui" version="1.4.8" targetFramework="net462" />
+  <package id="Fizzler" version="1.2.0" targetFramework="net48" />
+  <package id="HarfBuzzSharp" version="2.6.1.7" targetFramework="net48" />
+  <package id="Mapsui" version="3.0.2" targetFramework="net48" />
+  <package id="Mapsui.Wpf" version="3.0.2" targetFramework="net48" />
   <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net462" />
+  <package id="ShimSkiaSharp" version="0.5.7.1" targetFramework="net48" />
   <package id="SkiaSharp" version="2.80.3" targetFramework="net462" />
+  <package id="SkiaSharp.HarfBuzz" version="2.80.2" targetFramework="net48" />
   <package id="SkiaSharp.Svg" version="1.59.1" targetFramework="net462" />
   <package id="SkiaSharp.Views" version="1.60.0" targetFramework="net461" />
+  <package id="SkiaSharp.Views.Desktop.Common" version="2.80.2" targetFramework="net48" />
+  <package id="SkiaSharp.Views.WPF" version="2.80.2" targetFramework="net48" />
   <package id="sqlite-net-pcl" version="1.7.335" targetFramework="net462" />
   <package id="SQLitePCLRaw.bundle_green" version="2.0.3" targetFramework="net462" />
   <package id="SQLitePCLRaw.core" version="2.0.3" targetFramework="net462" />
   <package id="SQLitePCLRaw.lib.e_sqlite3" version="2.0.3" targetFramework="net462" />
   <package id="SQLitePCLRaw.provider.dynamic_cdecl" version="2.0.3" targetFramework="net462" />
   <package id="Stub.System.Data.SQLite.Core.NetFramework" version="1.0.115.0" targetFramework="net461" />
+  <package id="Svg.Custom" version="0.5.7.1" targetFramework="net48" />
+  <package id="Svg.Model" version="0.5.7.1" targetFramework="net48" />
+  <package id="Svg.Skia" version="0.5.7.1" targetFramework="net48" />
   <package id="System.Buffers" version="4.4.0" targetFramework="net462" />
   <package id="System.Collections" version="4.3.0" targetFramework="net461" />
   <package id="System.Data.SQLite.Core" version="1.0.115.0" targetFramework="net461" />
@@ -22,4 +32,6 @@
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net462" />
   <package id="System.Runtime.Extensions" version="4.3.0" targetFramework="net461" requireReinstallation="true" />
   <package id="System.Threading" version="4.3.0" targetFramework="net461" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net48" />
+  <package id="Topten.RichTextKit" version="0.4.145" targetFramework="net48" />
 </packages>
