--- a/VectorTileRenderer/VectorTileRenderer.csproj
+++ b/VectorTileRenderer/VectorTileRenderer.csproj
@@ -22,7 +22,7 @@
 		<ErrorReport>prompt</ErrorReport>
 		<WarningLevel>4</WarningLevel>
 		<AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-		<PlatformTarget>x64</PlatformTarget>
+		<PlatformTarget>AnyCPU</PlatformTarget>
 	</PropertyGroup>
 	<PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
 		<DebugType>pdbonly</DebugType>
@@ -169,10 +169,10 @@
 		<PackageReference Include="sqlite-net-pcl" Version="1.7.335" />		
 	</ItemGroup>
 	<ItemGroup>
-	  <ProjectReference Include="..\Mapbox.VectorTiles\ExtensionMethods\ExtensionMethods.csproj" />
-	  <ProjectReference Include="..\Mapbox.VectorTiles\Geometry\Geometry.csproj" />
-	  <ProjectReference Include="..\Mapbox.VectorTiles\PbfReader\PbfReader.csproj" />
-	  <ProjectReference Include="..\Mapbox.VectorTiles\VectorTileReader\VectorTileReader.csproj" />
+	  <ProjectReference Include="..\Mapbox.VectorTiles\ExtensionMethods\Mapbox.VectorTile.ExtensionMethods.csproj" />
+	  <ProjectReference Include="..\Mapbox.VectorTiles\Geometry\Mapbox.VectorTile.Geometry.csproj" />
+	  <ProjectReference Include="..\Mapbox.VectorTiles\PbfReader\Mapbox.VectorTile.PbfReader.csproj" />
+	  <ProjectReference Include="..\Mapbox.VectorTiles\VectorTileReader\Mapbox.VectorTile.VectorTileReader.csproj" />
 	</ItemGroup>
 	<ItemGroup>
 	  <Resource Include="Styles\fonts\Metropolis-Black-Italic.otf" />
