Fix a lot of small issues with source and compiler warnings Fix all the namespaces so that they aren't weird and vague. Reorganise stuff so that it makes sense and our Point, Rect etc are in a more sensible place and names more pleasingly.

--- a/Mapsui.Demo.WPF/Mapsui.Demo.WPF.csproj
+++ b/Mapsui.Demo.WPF/Mapsui.Demo.WPF.csproj
@@ -197,9 +197,9 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\VectorTileRenderer\VectorTileRenderer.csproj">
+    <ProjectReference Include="..\VectorTileRenderer\AliFlux.VectorTileRenderer.csproj">
       <Project>{46423799-3b17-4e62-b0ab-5c5a13ee9eb2}</Project>
-      <Name>VectorTileRenderer</Name>
+      <Name>AliFlux.VectorTileRenderer</Name>
       <Private>True</Private>
     </ProjectReference>
   </ItemGroup>
