--- a/VectorTileRenderer/AliFlux.VectorTileRenderer.csproj
+++ b/VectorTileRenderer/AliFlux.VectorTileRenderer.csproj
@@ -1,38 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
-		<Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-		<Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-		<ProjectGuid>{46423799-3B17-4E62-B0AB-5C5A13EE9EB2}</ProjectGuid>
-		<OutputType>Library</OutputType>
-		<AppDesignerFolder>Properties</AppDesignerFolder>
-		<RootNamespace>VectorTileRenderer</RootNamespace>
-		<AssemblyName>VectorTileRenderer</AssemblyName>
 		<TargetFramework>netstandard2.0</TargetFramework>
-		<FileAlignment>512</FileAlignment>
-		<ShouldIncludeNativeSkiaSharp>True</ShouldIncludeNativeSkiaSharp>
-		<NuGetPackageImportStamp>
-		</NuGetPackageImportStamp>
-	</PropertyGroup>
-	<PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-		<DebugSymbols>true</DebugSymbols>
-		<DebugType>full</DebugType>
-		<Optimize>false</Optimize>
-		<OutputPath>bin\Debug\</OutputPath>
-		<DefineConstants>DEBUG;TRACE</DefineConstants>
-		<ErrorReport>prompt</ErrorReport>
-		<WarningLevel>4</WarningLevel>
+		<Configurations>Debug;Release</Configurations>
 		<AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-		<PlatformTarget>AnyCPU</PlatformTarget>
-	</PropertyGroup>
-	<PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-		<DebugType>pdbonly</DebugType>
-		<Optimize>true</Optimize>
-		<OutputPath>bin\Release\</OutputPath>
-		<DefineConstants>TRACE</DefineConstants>
-		<ErrorReport>prompt</ErrorReport>
-		<WarningLevel>4</WarningLevel>
-		<AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-		<PlatformTarget>x64</PlatformTarget>
 	</PropertyGroup>
 	<ItemGroup>
 	  <None Remove="Styles\aliflux-style.json" />
@@ -153,13 +123,6 @@
 	  <EmbeddedResource Include="Styles\streets-style.json" />
 	</ItemGroup>
 	<ItemGroup>
-		<None Include="app.config" />
-	</ItemGroup>
-	<ItemGroup>
-		<PackageReference Include="Microsoft.CSharp" Version="4.3.0" />
-		<PackageReference Include="NETStandard.Library">
-			<Version>2.0.3</Version>
-		</PackageReference>
 		<PackageReference Include="Newtonsoft.Json">
 			<Version>13.0.1</Version>
 		</PackageReference>
